--- a/udev/README.org
+++ b/udev/README.org
@@ -36,3 +36,10 @@
     # i.e.
     KERNEL=="sda1", ENV{UDISKS_PRESENTATION_HIDE}="1"
   #+end_verse
+
+
+* enable mpt devices
+
+  #+BEGIN_SRC bash
+    cp 51-android.rules /etc/udev/rules.d/51-android.rules
+  #+END_SRC
